--- a/index copy.html
+++ b/index copy.html
@@ -30,10 +30,10 @@
     <div class="container">
         <div class="row">
             <header class="col-12 col-md-12 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-                    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                    <a href="./index copy.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><img src="./assets/iconos/logo.png" alt="Travel Bus" width="40" height="32"></svg>
                     <span class="fs-4">Travel Bus</span>
-                </a>
+                    </a>
       
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="#" class="nav-link px-2 link-secondary">¿Quienes somos?</a></li>
@@ -42,7 +42,7 @@
                 </ul>
       
                 <div class="col-md-3 text-end">
-                    <button type="button" class="btn btn-outline-primary me-2">Iniciar Sesión</button>
+                    <a href="./page/Iniciar Sesion.html"><button type="button" class="btn btn-outline-primary me-2">Regístrate</button></a>
                     <button type="button" class="btn btn-primary">Salir</button>
                 </div>
             </header>
@@ -66,9 +66,9 @@
             <span class="text-muted">&copy; 2022 Travel Bus, Inc</span>
             </div>
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
-            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://twitter.com/" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/?hl=es" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="https://es-la.facebook.com/" target="_blank"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
             </ul>
         </div>
     </footer>
