--- a/index copy.html
+++ b/index copy.html
@@ -46,11 +46,134 @@
                     <button type="button" class="btn btn-primary">Salir</button>
                 </div>
             </header>
-            <nav class="col-12 col-md-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eum delectus consequatur praesentium corporis ipsum autem sequi debitis suscipit temporibus officiis dicta accusamus amet, tenetur alias quas reprehenderit nihil minus maiores doloribus architecto excepturi! Similique incidunt sunt optio distinctio vel.</p>
+            <nav class="col-12 col-md-12 p-3 mb-2 bg-secondary bg-opacity-10 rounded-3">
+                <h1 class="h5 text-primary">Boletos de autobús</h1>
+                <div class="my-1">
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                          Solo Ida
+                        </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                          Ida y vuelta
+                        </label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                          Abierto
+                        </label>
+                    </div>
+                </div>
+                <div class="container d-flex justify-content-center flex-column">
+                    <div class="row my-1">
+                        <div class="col-12 my-1 col-md-4">
+                            <input class="form-control form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="Seleccione Origen...">
+                            <datalist id="datalistOptions">
+                            <option value="San Francisco">
+                            <option value="New York">
+                            <option value="Seattle">
+                            <option value="Los Angeles">
+                            <option value="Chicago">
+                            </datalist>
+                        </div>
+                        <div class="col-12 my-1 col-md-4">
+                            <input class="form-control form-control-sm" list="datalistOptions" id="exampleDataList" placeholder="Seleccione Destino...">
+                            <datalist id="datalistOptions">
+                            <option value="San Francisco">
+                            <option value="New York">
+                            <option value="Seattle">
+                            <option value="Los Angeles">
+                            <option value="Chicago">
+                            </datalist>
+                        </div>
+                        <div class="col-12 my-1 col-md-4">
+                            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                            <option selected>No. Pasajeros</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="3">4</option>
+                            <option value="3">5</option>
+                            </select>
+                        </div>
+                        <div class="col-3 my-1 col-md-1">
+                            <label for="dia" class="col-form-label col-form-label-sm">Ida</label>
+                        </div>
+                        <div class="col-9 my-1 col-md-2">
+                            <input type="date" id="dia" class="form-control form-control-sm">
+                        </div>
+                        <div class="col-3 my-1 col-md-1">
+                            <label for="regreso" class="col-form-label col-form-label-sm">Regreso</label>
+                        </div>
+                        <div class="col-9 my-1 col-md-2">
+                            <input type="date" id="regreso" class="form-control form-control-sm">
+                        </div>
+                        <div class="col-12 my-1 col-md-6 d-flex justify-content-end">
+                            <a href="./page/lineatobuses.html"><button type="submit" class="btn btn-sm btn-secondary">Buscar</button></a>
+                        </div>
+                    </div>
+                </div>
             </nav>
             <main class="col-12 col-md-8">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eum delectus consequatur praesentium corporis ipsum autem sequi debitis suscipit temporibus officiis dicta accusamus amet, tenetur alias quas reprehenderit nihil minus maiores doloribus architecto excepturi! Similique incidunt sunt optio distinctio vel.</p>
+                <div class="container">
+                    <div class="row">
+                      <div class="col-12 my-1 col-md-12">
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="./assets/imagenes/CDMX.png" class="d-block w-100 rounded-3" alt="Mexico">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="./assets/imagenes/CDMX.png" class="d-block w-100 rounded-3" alt="Mexico">
+                              </div>
+                              <div class="carousel-item">
+                                <img src="./assets/imagenes/CDMX.png" class="d-block w-100 rounded-3" alt="Mexico">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>    
+                      </div>
+                      <div class="col-12 my-1 col-md-12">
+                        <div class="container d-flex flex-column">
+                            <h5 class="text-dark rounded-3 bg-info text-dark bg-opacity-25 w-100 text-center">Líneas de autobús</h5>
+                            <p class="text-dark text-center ">Consulta horarios, precios y destinos de las mejores líneas de autobús.</p>
+                            <div class="row">
+                              <div class="col" style="height: 150px;">
+                                <img src="./assets/iconos/e1_costa.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Costa Line">
+                              </div>
+                              <div class="col"style="height: 150px;">
+                                <img src="./assets/iconos/elite.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Elite">
+                              </div>
+                              <div class="col"style="height: 150px;">
+                                <img src="./assets/iconos/logo-autobuses-caminante.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Caminantes">
+                              </div>
+                            </div>
+                            <div class="row">
+                              <div class="col"style="height: 150px;">
+                                <img src="./assets/iconos/logo-etn.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="ETN">
+                              </div>
+                              <div class="col"style="height: 150px;">
+                                <img src="./assets/iconos/ovnibus.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Ovnibus">
+                              </div>
+                              <div class="col"style="height: 150px;">
+                                <img src="./assets/iconos/turistar-b.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Turistar">
+                              </div>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                </div>
             </main>
             <aside class="col-12 col-md-4">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eum delectus consequatur praesentium corporis ipsum autem sequi debitis suscipit temporibus officiis dicta accusamus amet, tenetur alias quas reprehenderit nihil minus maiores doloribus architecto excepturi! Similique incidunt sunt optio distinctio vel.</p>
