--- a/index .html
+++ b/index .html
@@ -146,8 +146,8 @@
                       </div>
                       <div class="col-12 my-1 col-md-12">
                         <div class="container d-flex flex-column">
-                            <h5 class="text-dark rounded-3 bg-info text-dark bg-opacity-25 w-100 text-center">Líneas de autobús</h5>
-                            <p class="text-dark text-center ">Consulta horarios, precios y destinos de las mejores líneas de autobús.</p>
+                            <h5 class="text-dark rounded-3 p-3 mb-2 bg-secondary bg-opacity-25 w-100 text-center">Líneas de autobús</h5>
+                            <p class="text-dark text-center">Consulta horarios, precios y destinos de las mejores líneas de autobús.</p>
                             <div class="row">
                               <div class="col" style="height: 150px;">
                                 <img src="./assets/iconos/e1_costa.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Costa Line">
@@ -175,8 +175,35 @@
                     </div>
                 </div>
             </main>
-            <aside class="col-12 col-md-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim eum delectus consequatur praesentium corporis ipsum autem sequi debitis suscipit temporibus officiis dicta accusamus amet, tenetur alias quas reprehenderit nihil minus maiores doloribus architecto excepturi! Similique incidunt sunt optio distinctio vel.</p>
+            <aside class="col-12 col-md-4 container border border-2 rounded-3">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="p-3 mb-2 w-100 h5 text-center text-dark">Aprovecha las promociones</h3>
+                    </div>
+                    <div class="col-12">
+                        <p class="p-2 mb-2">En Travel Bus queremos brindarte los mejores beneficios en tu viaje y llegada a los mejores destinos.</p>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center p-2 mb-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/imagenes/Promo.webp" class="card-img-top w-50 align-self-center p-3" alt="10 %">
+                            <div class="card-body">
+                              <h5 class="card-title">Descuento 10% y 15%.</h5>
+                              <p class="card-text">10% de descuento en la compra de boleto sencillo y 15% de descuento solo en el boleto de regreso.</p>
+                              <a href="#" class="btn btn-primary">Leer más...</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 d-flex justify-content-center p-2 mb-2">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./assets/imagenes/Promo2.webp" class="card-img-top w-50 align-self-center p-3" alt="10 %">
+                            <div class="card-body">
+                              <h5 class="card-title">Viajero Anticipado 40%</h5>
+                              <p class="card-text">Conoce la tarifa de Viajero Anticipado que Travel Bus tiene para ti, para que encuentres el mejor precio para viajar.</p>
+                              <a href="#" class="btn btn-primary">Leer más...</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </aside>
         </div>
     </div>
