--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/iconos/autobus icono.png">
-    <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand&display=swap" rel="stylesheet">
     <title>Travel Bus</title>
 </head>
 <body>
@@ -29,7 +27,7 @@
       </svg>
     <div class="container">
         <div class="row">
-            <header class="col-12 col-md-12 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <header class="col-12 col-lg-12 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
                     <a href="./index copy.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><img src="./assets/iconos/logo.png" alt="Travel Bus" width="40" height="32"></svg>
                     <span class="fs-4">Travel Bus</span>
@@ -42,11 +40,11 @@
                 </ul>
       
                 <div class="col-md-3 text-end">
-                    <a href="./page/Iniciar Sesion.html"><button type="button" class="btn btn-outline-primary me-2">Regístrate</button></a>
+                    <a href="./page/Registro.html"><button type="button" class="btn btn-outline-primary me-2">Regístrate</button></a>
                     <button type="button" class="btn btn-primary">Salir</button>
                 </div>
             </header>
-            <nav class="col-12 col-md-12 p-3 mb-2 bg-secondary bg-opacity-10 rounded-3">
+            <nav class="col-12 col-lg-12 p-3 mb-2 bg-secondary bg-opacity-10 rounded-3">
                 <h1 class="h5 text-primary">Boletos de autobús</h1>
                 <div class="my-1">
                     <div class="form-check form-check-inline">
@@ -118,7 +116,7 @@
                     </div>
                 </div>
             </nav>
-            <main class="col-12 col-md-8">
+            <main class="col-12 col-lg-8">
                 <div class="container">
                     <div class="row">
                       <div class="col-12 my-1 col-md-12">
@@ -175,7 +173,7 @@
                     </div>
                 </div>
             </main>
-            <aside class="col-12 col-md-4 container border border-2 rounded-3">
+            <aside class="col-12 col-lg-4 container border border-2 rounded-3">
                 <div class="row">
                     <div class="col-12">
                         <h3 class="p-3 mb-2 w-100 h5 text-center text-dark">Aprovecha las promociones</h3>
@@ -222,7 +220,8 @@
             </ul>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+    <script src="./js/bootstrap.js"></script>
+    
 </body>
 </html>
