--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="row">
             <header class="col-12 col-lg-12 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-                    <a href="./index copy.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                    <a href="./index.html" id="logo" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><img src="./assets/iconos/logo.png" alt="Travel Bus" width="40" height="32"></svg>
                     <span class="fs-4">Travel Bus</span>
                     </a>
@@ -144,28 +144,28 @@
                       </div>
                       <div class="col-12 my-1 col-md-12">
                         <div class="container d-flex flex-column">
-                            <h5 class="text-dark rounded-3 p-3 mb-2 bg-secondary bg-opacity-25 w-100 text-center">Líneas de autobús</h5>
+                            <h5 class="p-2 text-primary w-100 text-center border-bottom">Líneas de autobús</h5>
                             <p class="text-dark text-center">Consulta horarios, precios y destinos de las mejores líneas de autobús.</p>
                             <div class="row">
                               <div class="col" style="height: 150px;">
-                                <img src="./assets/iconos/e1_costa.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Costa Line">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/e1_costa.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Costa Line"></a>
                               </div>
                               <div class="col"style="height: 150px;">
-                                <img src="./assets/iconos/elite.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Elite">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/elite.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Elite"></a>
                               </div>
                               <div class="col"style="height: 150px;">
-                                <img src="./assets/iconos/logo-autobuses-caminante.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Caminantes">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/logo-autobuses-caminante.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Caminantes"></a>
                               </div>
                             </div>
                             <div class="row">
                               <div class="col"style="height: 150px;">
-                                <img src="./assets/iconos/logo-etn.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="ETN">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/logo-etn.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="ETN"></a>
                               </div>
                               <div class="col"style="height: 150px;">
-                                <img src="./assets/iconos/ovnibus.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Ovnibus">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/ovnibus.png"" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Ovnibus"></a>
                               </div>
                               <div class="col"style="height: 150px;">
-                                <img src="./assets/iconos/turistar-b.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Turistar">
+                                <a href="./page/lineatobuses.html"><img src="./assets/iconos/turistar-b.png" class="img-fluid mh-100" style="width: 100%; height: 150px;" alt="Turistar"></a>
                               </div>
                             </div>
                           </div>
@@ -173,16 +173,16 @@
                     </div>
                 </div>
             </main>
-            <aside class="col-12 col-lg-4 container border border-2 rounded-3">
+            <aside class="col-12 col-lg-4 container border border-2 rounded-3 bg-success bg-gradient bg-opacity-10">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="p-3 mb-2 w-100 h5 text-center text-dark">Aprovecha las promociones</h3>
+                        <h3 class="p-3 mb-2 w-100 h5 text-center text-warning">Aprovecha las promociones</h3>
                     </div>
                     <div class="col-12">
                         <p class="p-2 mb-2">En Travel Bus queremos brindarte los mejores beneficios en tu viaje y llegada a los mejores destinos.</p>
                     </div>
                     <div class="col-12 d-flex justify-content-center p-2 mb-2">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card bg-success bg-gradient bg-opacity-10" style="width: 18rem;">
                             <img src="./assets/imagenes/Promo.webp" class="card-img-top w-50 align-self-center p-3" alt="10 %">
                             <div class="card-body">
                               <h5 class="card-title">Descuento 10% y 15%.</h5>
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="col-12 d-flex justify-content-center p-2 mb-2">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card bg-success bg-gradient bg-opacity-10" style="width: 18rem;">
                             <img src="./assets/imagenes/Promo2.webp" class="card-img-top w-50 align-self-center p-3" alt="10 %">
                             <div class="card-body">
                               <h5 class="card-title">Viajero Anticipado 40%</h5>
@@ -222,6 +222,6 @@
     </footer>
 
     <script src="./js/bootstrap.js"></script>
-    
+
 </body>
 </html>
